--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -35,8 +35,13 @@ menu.helpintro=Introduction to syllabification
 about.header=About Asheninka
 about.content=A linguistic program to explore syllabification and\nprovide a principled approach to hyphenation.\n\nVersion: {0}\n\n© 2015 SIL International\nThis software is licensed under the LGPL, version 2.1 or later\n(http://www.gnu.org/licenses/lgpl-2.1.html)
 
-#File Open/Save As dialog
-file.filterdescription=Syllable Parser files
+#File Open/Save As dialog; import/export
+file.filterdescription=Asheninka files
+file.plainlistimportfilterdescription=Plain list files
+file.paratexthyphenatedwordsfilterdescription=ParaTExt hyphenatedWords.txt files
+file.paratextexportedwordlistfilterdescription=ParaTExt exported word list files
+file.exportedhyphenationlistfilterdescription=Hyphenation files
+file.xlingpaperhyphenationexceptionfilterdescription=XLingPaper hyphenation exception files
 
 #Choose Interface Language dialog
 dialog.chooseinterfacelanguage=Choose Interface Language
