first pass at getting importing plain text word list to show progress bar and change mouse cursor

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -94,6 +94,8 @@ label.words=Words
 label.predictedsyllabification=Predicted Syllable Breaks
 label.correctsyllabification=Correct Syllable Breaks
 label.discussion=Discussion
+label.importing=Importing: 
+label.exporting=Exporting: 
 label.syllabifying=Syllabifying: 
 label.parserresult=Parser Result
 label.untested=Untested
