--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -8,9 +8,10 @@ menu.save=Save
 menu.saveas=Save As...
 menu.importwords=Import Words
 menu.importplainwordlist=Import text file with one word per line
+menu.importflexwordlist=Import word list exported from FLEx (in tab-delimited form)
 menu.importparatextwordlist=Import word list exported from ParaTExt
-menu.exporthyphenatedwords=Export Hyphenated Words
 menu.importparatexthyphenatedwords=Import hyphenatedWords.txt file from ParaTExt
+menu.exporthyphenatedwords=Export Hyphenated Words
 menu.exporthyphenatedwordsforindesign=Export for InDesign (simple list)
 menu.exporthyphenatedwordsforparatext=Export for ParaTExt (hyphenatedWords.txt)
 menu.exporthyphenatedwordsforxlingpaper=Export for XLingPaper (hyphenations exception file)
