First pass at adding active state to segments.

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -86,6 +86,7 @@ label.syllablepatterns=Syllable Patterns
 label.name=Name
 label.cancel=Cancel
 label.help=Help
+label.active=Active
 label.ok=OK
 label.segmentsandnaturalclasses=Seg. or NC
 label.choosenc=Choose one or more natural classes
