SYLP-35: add font info for vernacular and analysis languages.

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -22,6 +22,9 @@ menu.copy=Copy
 menu.paste=Paste
 menu.insertnew=New item
 menu.remove=Remove item
+menu.language=Language
+menu.vernacularfont=Vernacular Font
+menu.analysisfont=Analysis Font
 menu.tools=Tools
 menu.syllabifywords=Syllabify Words
 menu.convertpredictedtocorrect=Convert predicted to correct syllabification
