--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -100,7 +100,9 @@ label.predictedsyllabification=Predicted Syllable Breaks
 label.correctsyllabification=Correct Syllable Breaks
 label.discussion=Discussion
 label.importing=Importing: 
+label.importingcanceled=Importing canceled!
 label.exporting=Exporting: 
+label.exportingcanceled=Exporting canceled!
 label.syllabifying=Syllabifying: 
 label.parserresult=Parser Result
 label.untested=Untested
