SYLP-32, SYLP-33: add backup and restore

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -6,6 +6,9 @@ menu.new=New
 menu.open=Open...
 menu.save=Save
 menu.saveas=Save As...
+menu.projectmanagement=Project Management
+menu.projectmanagementbackup=Back up this project...
+menu.projectmanagementrestore=Restore a project...
 menu.importwords=Import Words
 menu.importplainwordlist=Import text file with one word per line
 menu.importflexwordlist=Import word list exported from FLEx (in tab-delimited form)
@@ -79,44 +82,51 @@ onc.view.syllablepatterns=ONC Syllable Patterns
 onc.view.words=ONC Words
 
 # labels
-label.segmentinventory=Segment Inventory
-label.segment=Segment
-label.orthographicforms=Graphemes
-label.description=Description
-label.naturalclasses=Natural Classes
-label.segmentornaturalclass=Segment or Natural Class
-label.syllablepatterns=Syllable Patterns
-label.name=Name
-label.cancel=Cancel
-label.help=Help
 label.active=Active
-label.ok=OK
-label.segmentsandnaturalclasses=Seg. or NC
+label.backupcomment=Enter a description for this backup: 
+label.backupdirectory=Backup directory: 
+label.browse=Browse
+label.cancel=Cancel
+label.choosebackup=Choose a backup to restore:
 label.choosenc=Choose one or more natural classes
+label.choosepredicted=Choose which predicted syllabifications to convert to correct syllabification
 label.choosesnc=Choose one or more segments and/or natural classes
-label.word=Word
-label.words=Words
-label.predictedsyllabification=Predicted Syllable Breaks
 label.correctsyllabification=Correct Syllable Breaks
+label.cvnaturalclassfailure=Failure: could not parse into natural classes
+label.cvsegmentfailure=Failure: could not parse into segments
+label.cvsyllabificationfailure=Failure: could not parse natural classes into syllables
+label.date=Date
+label.description=Description
 label.discussion=Discussion
-label.importing=Importing: 
-label.importingcanceled=Importing canceled!
 label.exporting=Exporting: 
 label.exportingcanceled=Exporting canceled!
-label.syllabifying=Syllabifying: 
-label.parserresult=Parser Result
-label.untested=Untested
-label.success=Success
-label.cvsegmentfailure=Failure: could not parse into segments
-label.cvnaturalclassfailure=Failure: could not parse into natural classes
-label.cvsyllabificationfailure=Failure: could not parse natural classes into syllables
-label.choosepredicted=Choose which predicted syllabifications to convert to correct syllabification
+label.filename=File Name
+label.help=Help
+label.importing=Importing: 
+label.importingcanceled=Importing canceled!
+label.name=Name
+label.naturalclasses=Natural Classes
 # menu.syllabifywords goes at the end of the following message
 label.nopredicted=There are no predicted syllabifications.\nEither there are no words,\nall words failed to syllabify,\nor you need to invoke  
-label.wordtofind=Word to find: 
-label.wordpredictedvscorrect=Predicted vs. Correct Syllabification
 # menu.syllabifywords goes at the end of the following message
 label.nopredictedvscorrect=There are no differences between predicted and correct syllabifications.\nEither all predicted syllabifications are correct,\nthere are no words,\nall words failed to syllabify,or\nyou need to invoke 
+label.ok=OK
+label.orthographicforms=Graphemes
+label.parserresult=Parser Result
+label.predictedsyllabification=Predicted Syllable Breaks
+label.restoreproject=Restore a Project
+label.segment=Segment
+label.segmentinventory=Segment Inventory
+label.segmentornaturalclass=Segment or Natural Class
+label.segmentsandnaturalclasses=Seg. or NC
+label.success=Success
+label.syllabifying=Syllabifying: 
+label.syllablepatterns=Syllable Patterns
+label.untested=Untested
+label.word=Word
+label.wordpredictedvscorrect=Predicted vs. Correct Syllabification
+label.words=Words
+label.wordtofind=Word to find: 
 
 # file loading/saving
 file.error=Error
