Add accelerator keys (also to button tooltips) and mnemonic keys.

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -1,42 +1,42 @@
 # English internationalization file for Syllable Parser
 program.name=Asheninka
 # menu items
-menu.file=File
-menu.new=New
-menu.open=Open...
-menu.save=Save
-menu.saveas=Save As...
-menu.projectmanagement=Project Management
-menu.projectmanagementbackup=Back up this project...
-menu.projectmanagementrestore=Restore a project...
-menu.importwords=Import Words
-menu.importplainwordlist=Import text file with one word per line
-menu.importflexwordlist=Import word list exported from FLEx (in tab-delimited form)
-menu.importparatextwordlist=Import word list exported from ParaTExt
-menu.importparatexthyphenatedwords=Import hyphenatedWords.txt file from ParaTExt
-menu.exporthyphenatedwords=Export Hyphenated Words
-menu.exporthyphenatedwordsforindesign=Export for InDesign (simple list)
-menu.exporthyphenatedwordsforparatext=Export for ParaTExt (hyphenatedWords.txt)
-menu.exporthyphenatedwordsforxlingpaper=Export for XLingPaper (hyphenations exception file)
-menu.exit=Exit
-menu.edit=Edit
-menu.cut=Cut
-menu.copy=Copy
-menu.paste=Paste
-menu.insertnew=New item
-menu.remove=Remove item
-menu.language=Language
-menu.vernacularfont=Vernacular Font
-menu.analysisfont=Analysis Font
-menu.tools=Tools
-menu.syllabifywords=Syllabify Words
-menu.convertpredictedtocorrect=Convert predicted to correct syllabification
-menu.findword=Find Word
-menu.view=View
-menu.changeinterfacelanguage=Change the interface language
-menu.help=Help
-menu.about=About Asheninka
-menu.helpintro=Introduction to syllabification
+menu.file=_File
+menu.new=_New
+menu.open=_Open...
+menu.save=_Save
+menu.saveas=Save _As...
+menu.projectmanagement=_Project Management
+menu.projectmanagementbackup=_Back up this project...
+menu.projectmanagementrestore=_Restore a project...
+menu.importwords=_Import Words
+menu.importplainwordlist=Import _text file with one word per line
+menu.importflexwordlist=Import word list exported from _FLEx (in tab-delimited form)
+menu.importparatextwordlist=Import word list exported from _ParaTExt
+menu.importparatexthyphenatedwords=Import _hyphenatedWords.txt file from ParaTExt
+menu.exporthyphenatedwords=_Export Hyphenated Words
+menu.exporthyphenatedwordsforindesign=Export for _InDesign (simple list)
+menu.exporthyphenatedwordsforparatext=Export for _ParaTExt (hyphenatedWords.txt)
+menu.exporthyphenatedwordsforxlingpaper=Export for _XLingPaper (hyphenations exception file)
+menu.exit=E_xit
+menu.edit=_Edit
+menu.cut=Cu_t
+menu.copy=_Copy
+menu.paste=_Paste
+menu.insertnew=_New item
+menu.remove=_Remove item
+menu.language=_Language
+menu.vernacularfont=_Vernacular Font
+menu.analysisfont=_Analysis Font
+menu.tools=_Tools
+menu.syllabifywords=Syllabify _Words
+menu.convertpredictedtocorrect=_Convert predicted to correct syllabification
+menu.findword=_Find Word
+menu.view=_View
+menu.changeinterfacelanguage=_Change the interface language
+menu.help=_Help
+menu.about=_About Asheninka
+menu.helpintro=_Introduction to syllabification
 
 # About dialog
 about.header=About Asheninka
@@ -144,3 +144,15 @@ checkbox.context.menu.toggle=Toggle
 misc.niyheader=Sorry
 misc.niycontent=Not implemented yet.
 
+# Tooltips
+tooltip.new=New   Ctrl+N
+tooltip.open=Open   Ctrl+O
+tooltip.save=Save   Ctrl+S
+tooltip.cut=Cut   Ctrl+X
+tooltip.copy=Copy   Ctrl+C
+tooltip.paste=Paste   Ctrl+P
+tooltip.insertnew=New item   Ctrl+I
+tooltip.remove=Remove item   Ctrl+D
+tooltip.syllabifywords=Syllabify Words   Ctrl+W
+tooltip.convertpredictedtocorrect=Convert predicted to correct syllabification
+tooltip.findword=Find Word   Ctrl+F
