SYLP-17 When started for the first time, ask to create a new project or open an existing one.

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -127,6 +127,8 @@ label.word=Word
 label.wordpredictedvscorrect=Predicted vs. Correct Syllabification
 label.words=Words
 label.wordtofind=Word to find: 
+label.createnewproject=Create a new project
+label.openexistingproject=Open existing project
 
 # file loading/saving
 file.error=Error
@@ -134,6 +136,8 @@ file.error.load.header=Could not load data
 file.error.load.content=Could not load data from file:\n
 file.error.save.header=Could not save data
 file.error.save.content=Could not save data to file:\n
+file.initiallynotfound=Apparently this program has not been run before.
+file.chooseanoption=Choose an option:
 
 # Check Box context menu
 checkbox.context.menu.clearall=Clear All
