Add remove words tool

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -32,6 +32,7 @@ menu.tools=_Tools
 menu.syllabifywords=Syllabify _Words
 menu.convertpredictedtocorrect=_Convert predicted to correct syllabification
 menu.findword=_Find Word
+menu.clearwords=_Remove all Words
 menu.view=_View
 menu.changeinterfacelanguage=_Change the interface language
 menu.help=_Help
@@ -129,6 +130,8 @@ label.words=Words
 label.wordtofind=Word to find: 
 label.createnewproject=Create a new project
 label.openexistingproject=Open existing project
+label.clearwords=Remove all the words form the word list\nWe suggest you make a backup before doing this.
+label.areyousure=Are you sure you want to do this?
 
 # file loading/saving
 file.error=Error
