Add HTML formatter for comparer

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -163,3 +163,26 @@ tooltip.remove=Remove item   Ctrl+D
 tooltip.syllabifywords=Syllabify Words   Ctrl+W
 tooltip.convertpredictedtocorrect=Convert predicted to correct syllabification
 tooltip.findword=Find Word   Ctrl+F
+
+# Differences reports
+report.cvtitle=CV Approach Comparison
+report.comparisonof=CV Approach Comparison between:
+report.performedon=Performed on 
+report.segmentinventory=Segment Inventory
+report.samesegmentinventory=Both have the same segment inventory.
+report.segmentswhichdiffer=The following segments differ between the two.
+report.first=First{0}
+report.second=Second{0}
+report.adjectivalendingf=
+report.adjectivalendingm=
+report.cvnaturalclasses=Natural Classes
+report.samecvnaturalclasses=Both have the same natural classes.
+report.cvnaturalclasseswhichdiffer=The following natural classes differ between the two.
+report.cvsyllablepatterns=Syllable Patterns
+report.samecvsyllablpatterns=Both have the same syllable patterns.
+report.cvsyllablepatternswhichdiffer=The following syllable patterns differ between the two.
+report.cvsyllablepatternsorder=The order of the syllable patterns is shown below.
+report.words=Words
+report.samewords=Both have the same words with the same syllables.
+report.wordswhichdiffer=The following words differ between the two.
+report.syllabification=Syllabification
