Part 1 on creating CV comparison dialog

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -132,6 +132,8 @@ label.createnewproject=Create a new project
 label.openexistingproject=Open existing project
 label.clearwords=Remove all the words form the word list\nWe suggest you make a backup before doing this.
 label.areyousure=Are you sure you want to do this?
+label.firstimplementation=First implementation:
+label.secondimplementation=Second implementation:
 
 # file loading/saving
 file.error=Error
@@ -163,6 +165,10 @@ tooltip.remove=Remove item   Ctrl+D
 tooltip.syllabifywords=Syllabify Words   Ctrl+W
 tooltip.convertpredictedtocorrect=Convert predicted to correct syllabification
 tooltip.findword=Find Word   Ctrl+F
+
+#Radio buttons
+radio.current=Current implementation
+radio.choosebackup=Choose a backup
 
 # Differences reports
 report.cvtitle=CV Approach Comparison
