More on comparer

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -33,6 +33,7 @@ menu.syllabifywords=Syllabify _Words
 menu.convertpredictedtocorrect=_Convert predicted to correct syllabification
 menu.findword=_Find Word
 menu.clearwords=_Remove all Words
+menu.compareimplementations=Compare _Implementations
 menu.view=_View
 menu.changeinterfacelanguage=_Change the interface language
 menu.help=_Help
@@ -132,6 +133,8 @@ label.createnewproject=Create a new project
 label.openexistingproject=Open existing project
 label.clearwords=Remove all the words form the word list\nWe suggest you make a backup before doing this.
 label.areyousure=Are you sure you want to do this?
+label.compare=Compare
+label.compareimplementations=Compare Implementations
 label.firstimplementation=First implementation:
 label.secondimplementation=Second implementation:
 
