Another pass on comparing versions, including UI.

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -137,6 +137,7 @@ label.compare=Compare
 label.compareimplementations=Compare Implementations
 label.firstimplementation=First implementation:
 label.secondimplementation=Second implementation:
+label.pleasewait=Please wait...
 
 # file loading/saving
 file.error=Error
