Refine compare messages; update platform build files.

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -140,7 +140,10 @@ label.compare=Compare
 label.compareimplementations=Compare Implementations
 label.firstimplementation=First implementation:
 label.secondimplementation=Second implementation:
+label.sameimplementationsheader=Same implementations
+label.sameimplementationscontent=The two chosen implementations are the same.  Therefore, they are identical.
 label.pleasewait=Please wait...
+label.pleasewaitexplanation=This process could take a few seconds or several minutes depending on how many differences there are.
 
 # file loading/saving
 file.error=Error
