First draft of user doc; add views to View menu; add 64bit build xml files

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -41,6 +41,7 @@ menu.view=_View
 menu.changeinterfacelanguage=_Change the interface language
 menu.help=_Help
 menu.about=_About Asheninka
+menu.userdocumentation=User Documentation
 menu.helpintro=_Introduction to syllabification
 
 # About dialog
