Improve parser failure messages

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -98,8 +98,8 @@ label.choosenc=Choose one or more natural classes
 label.choosepredicted=Choose which predicted syllabifications to convert to correct syllabification
 label.choosesnc=Choose one or more segments and/or natural classes
 label.correctsyllabification=Correct Syllable Breaks
-label.cvnaturalclassfailure=Failure: could not parse into natural classes
-label.cvsegmentfailure=Failure: could not parse into segments
+label.cvnaturalclassfailure=Failure: could not parse into natural classes; did find classes '{0}' covering graphemes '{1}'.
+label.cvsegmentfailure=Failure: could not parse into segments beginning at '{0}'.
 label.cvsyllabificationfailure=Failure: could not parse natural classes into syllables
 label.date=Date
 label.description=Description
