--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_112"/>
 	<classpathentry kind="lib" path="diff-match-patch/diff-match-patch.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Andy Black/Documents/Eclipse4.4Workspace/SyllableParser/ControlsFX/controlsfx-8.40.12.jar"/>
+	<classpathentry kind="lib" path="ControlsFX/controlsfx-8.40.12.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
