Rework menus; add hyphenation parameters, pass 1 (SYLP-2); improve user doc

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -20,7 +20,11 @@ menu.importparatexthyphenatedwords=Import _hyphenatedWords.txt file from ParaTEx
 menu.exporthyphenatedwords=_Export Hyphenated Words
 menu.exporthyphenatedwordsforindesign=Export for _InDesign (simple list)
 menu.exporthyphenatedwordsforparatext=Export for _ParaTExt (hyphenatedWords.txt)
-menu.exporthyphenatedwordsforxlingpaper=Export for _XLingPaper (hyphenations exception file)
+menu.exporthyphenatedwordsforxlingpaper=Export for _XLingPaper (hyphenation exceptions file)
+menu.exporthyphenationparameters=Hyphenation Parameters
+menu.exporthyphenationparametersforindesign=Parameters for InDesign (simple list)
+menu.exporthyphenationparametersforparatext=Parameters for ParaTExt (hyphenatedWords.txt)
+menu.exporthyphenationparametersforxlingpaper=Parameters for XLingPaper (hyphenation exceptions file)
 menu.exit=E_xit
 menu.edit=_Edit
 menu.cut=Cu_t
@@ -28,9 +32,10 @@ menu.copy=_Copy
 menu.paste=_Paste
 menu.insertnew=_New item
 menu.remove=_Remove item
-menu.language=_Language
+#menu.language=_Language
 menu.vernacularfont=_Vernacular Font
 menu.analysisfont=_Analysis Font
+menu.parser=Pa_rser
 menu.tools=_Tools
 menu.syllabifywords=Syllabify _Words
 menu.convertpredictedtocorrect=_Convert predicted to correct syllabification
@@ -39,6 +44,7 @@ menu.clearwords=_Remove all Words
 menu.compareimplementations=Compare _Implementations
 menu.view=_View
 menu.changeinterfacelanguage=_Change the interface language
+menu.settings=Settings
 menu.help=_Help
 menu.about=_About Asheninka
 menu.userdocumentation=User Documentation
@@ -46,7 +52,7 @@ menu.helpintro=_Introduction to syllabification
 
 # About dialog
 about.header=About Asheninka
-about.content=A linguistic program to explore syllabification and\nprovide a principled approach to hyphenation.\n\nVersion: {0}\n\n© 2016 SIL International\nThis software is licensed under the LGPL, version 2.1 or later\n(http://www.gnu.org/licenses/lgpl-2.1.html)
+about.content=A linguistic program to explore syllabification and\nprovide a principled approach to hyphenation.\n\nVersion: {0}\n\n© 2016-2017 SIL International\nThis software is licensed under the LGPL, version 2.1 or later\n(http://www.gnu.org/licenses/lgpl-2.1.html)
 
 #File Open/Save As dialog; import/export
 file.filterdescription=Asheninka files
@@ -108,6 +114,13 @@ label.exporting=Exporting:
 label.exportingcanceled=Exporting canceled!
 label.filename=File Name
 label.help=Help
+label.hyphenationparameters=Hyphenation parameters for {0}
+label.hyphenationparametersindesign=InDesign (simple list)
+label.hyphenationparametersparatext=ParaTExt (hyphenatedWords.txt)
+label.hyphenationparametersxlingpaper=XLingPaper (hyphenation exceptions file)
+label.discretionaryhyphen=Discretionary hyphen character(s):
+label.hyphenationstartsafter=Hyphenation starts after this many characters from the beginning:
+label.hyphenationstopsbefore=Hyphenation stops before this many characters from the end:
 label.importing=Importing: 
 label.importingcanceled=Importing canceled!
 label.name=Name
@@ -125,6 +138,7 @@ label.segment=Segment
 label.segmentinventory=Segment Inventory
 label.segmentornaturalclass=Segment or Natural Class
 label.segmentsandnaturalclasses=Seg. or NC
+label.sethyphenationparameters=Set Hyphenation Parameters
 label.success=Success
 label.syllabifying=Syllabifying: 
 label.syllablepatterns=Syllable Patterns
