Improve save as with force save; add message

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -61,6 +61,8 @@ file.paratexthyphenatedwordsfilterdescription=ParaTExt hyphenatedWords.txt files
 file.paratextexportedwordlistfilterdescription=ParaTExt exported word list files
 file.exportedhyphenationlistfilterdescription=Hyphenation files
 file.xlingpaperhyphenationexceptionfilterdescription=XLingPaper hyphenation exception files
+file.requiresaveheader=Important!
+file.requiresavecontent=Please save the file.
 
 #Choose Interface Language dialog
 dialog.chooseinterfacelanguage=Choose Interface Language
