--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -41,6 +41,7 @@ menu.syllabifywords=Syllabify _Words
 menu.convertpredictedtocorrect=_Convert predicted to correct syllabification
 menu.findword=_Find Word
 menu.clearwords=_Remove all Words
+menu.clearcorrectsyllabificationinwords=Remove correct _syllabification in all words
 menu.compareimplementations=Compare _Implementations
 menu.view=_View
 menu.changeinterfacelanguage=_Change the interface language
@@ -151,7 +152,8 @@ label.words=Words
 label.wordtofind=Word to find: 
 label.createnewproject=Create a new project
 label.openexistingproject=Open existing project
-label.clearwords=Remove all the words form the word list\nWe suggest you make a backup before doing this.
+label.clearwords=Remove all the words from the word list\nWe suggest you make a backup before doing this.
+label.clearcorrectsyllabificationinwords=Remove all the correct syllabification forms in all words in the word list\nWe suggest you make a backup before doing this.
 label.areyousure=Are you sure you want to do this?
 label.compare=Compare
 label.compareimplementations=Compare Implementations
