--- a/.gitattributes
+++ b/.gitattributes
@@ -8,6 +8,7 @@
 .gitignore text eol=lf
 CVTestData.ashedata text eol=lf
 SyllableParser_es.properties text eol=lf
+*.xml text eol=lf
 
 # Denote all files that are truly binary and should not be modified.
 *.pdf binary
