Fix bug: The natural classer did not see the segments in a natural class embedded in another natural class.

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -233,7 +233,10 @@ report.tawtitle=Syllabification of {0}
 report.tawsegments=Parsing into segments
 report.tawnaturalclasses=Parsing segments into natural classes
 report.tawsyllablepatterns=Parsing natural classes into syllables
-report.tawdetails=Details:
+report.tawdetails=The details of the syllable patterns tried, in the order they were tried, is below.  Click on the box with a plus sign in it to open that path.  If a syllable pattern failed to match, it is in {0}.  If a syllable pattern matched, but did not eventually lead to a successful parse, it is in {1}.  Finally, if a syllable pattern matched and led to a successful parse, it is in {2}.  Note that successful parses are always the last item in the list because the algorithm quits after finding the first successful parse.
 report.tawgrapheme=Grapheme:
 report.tawsegment=Segment:
 report.tawsuccess=Success!
+report.failurecolorword=red
+report.matchedcolorword=blue
+report.successcolorword=green
