Revise user documentation, add suggested steps document
Fix a few small bugs that showed up revising the documentation.

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -41,18 +41,19 @@ menu.analysisfont=_Analysis Font
 menu.parser=Pa_rser
 menu.tools=_Tools
 menu.tryaword=Try a Word
-menu.syllabifywords=Syllabify _Words
+menu.syllabifywords=Parse all _Words
 menu.convertpredictedtocorrect=_Convert predicted to correct syllabification
 menu.findword=_Find Word
 menu.clearwords=_Remove all Words
-menu.clearcorrectsyllabificationinwords=Remove correct _syllabification in all words
+menu.clearcorrectsyllabificationinwords=Remove correct _syllable breaks in all words
 menu.compareimplementations=Compare _Implementations
 menu.view=_View
 menu.changeinterfacelanguage=_Change the interface language
 menu.settings=Settings
 menu.help=_Help
 menu.about=_About Asheninka
-menu.userdocumentation=User Documentation
+menu.userdocumentation=User _Documentation
+menu.suggestedsteps=_Suggested Steps
 menu.helpintro=_Introduction to syllabification
 
 # About dialog
@@ -104,6 +105,7 @@ onc.view.words=ONC Words
 label.active=Active
 label.backupcomment=Enter a description for this backup: 
 label.backupdirectory=Backup directory: 
+label.backupproject=Back up this project
 label.browse=Browse
 label.cancel=Cancel
 label.choosebackup=Choose a backup to restore:
@@ -206,7 +208,7 @@ tooltip.copy=Copy   Ctrl+C
 tooltip.paste=Paste   Ctrl+P
 tooltip.insertnew=New item   Ctrl+I
 tooltip.remove=Remove item   Ctrl+D
-tooltip.syllabifywords=Syllabify Words   Ctrl+W
+tooltip.syllabifywords=Parse all Words   Ctrl+W
 tooltip.convertpredictedtocorrect=Convert predicted to correct syllabification
 tooltip.findword=Find Word   Ctrl+F
 
