Refine and update build items.
Improve localization of some tools.

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -140,6 +140,7 @@ label.backupnowbeforeclearwords=Do you want to do a backup now?  (Yes will let y
 label.backupnowbeforeimport=Do you want to do a backup now?  (Yes will let you make a backup and then do the import. No will do the import without backing up first.  Cancel will exit.)
 label.name=Name
 label.naturalclasses=Natural Classes
+label.no=No
 # menu.syllabifywords goes at the end of the following message
 label.nopredicted=There are no predicted syllabifications.\nEither there are no words,\nall words failed to syllabify,\nor you need to invoke  
 # menu.syllabifywords goes at the end of the following message
@@ -166,6 +167,7 @@ label.wordpredictedvscorrect=Predicted vs. Correct Syllabification
 label.words=Words
 label.wordtofind=Word to find: 
 label.wordtotry=Word to try: 
+label.yes=Yes
 label.createnewproject=Create a new project
 label.openexistingproject=Open existing project
 label.clearwords=Remove all the words from the word list.\nWe suggest you make a backup before doing this.
