--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,10 @@
 XLingPaperPDFTemp
 *.xml~
 /.settings/
+build/build
+build/deploy
+build/dist
+build/doc
+build/externalLibs
+build/project
+resources/images
