--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -5,10 +5,10 @@
 program.name=Asheninka
 # menu items
 menu.file=_File
-menu.new=_New
-menu.open=_Open...
-menu.save=_Save
-menu.saveas=Save _As...
+menu.new=_New Project
+menu.open=_Open Project...
+menu.save=_Save Project
+menu.saveas=Save Project _As...
 menu.projectmanagement=_Project Management
 menu.projectmanagementbackup=_Back up this project...
 menu.projectmanagementrestore=_Restore a project...
@@ -202,9 +202,9 @@ misc.niyheader=Sorry
 misc.niycontent=Not implemented yet.
 
 # Tooltips
-tooltip.new=New   Ctrl+N
-tooltip.open=Open   Ctrl+O
-tooltip.save=Save   Ctrl+S
+tooltip.new=New Project   Ctrl+N
+tooltip.open=Open Project   Ctrl+O
+tooltip.save=Save Project   Ctrl+S
 tooltip.cut=Cut   Ctrl+X
 tooltip.copy=Copy   Ctrl+C
 tooltip.paste=Paste   Ctrl+P
