First pass at UI for segments with grapheme elements

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -120,6 +120,7 @@ label.cvsyllabificationfailure=Failure: could not parse natural classes into syl
 label.date=Date
 label.description=Description
 label.discussion=Discussion
+label.environments=Environments
 label.exporting=Exporting: 
 label.exportingcanceled=Exporting canceled!
 label.filename=File Name
@@ -146,7 +147,9 @@ label.nopredicted=There are no predicted syllabifications.\nEither there are no 
 # menu.syllabifywords goes at the end of the following message
 label.nopredictedvscorrect=There are no differences between predicted and correct syllabifications.\nEither all predicted syllabifications are correct,\nthere are no words,\nall words failed to syllabify,or\nyou need to invoke 
 label.ok=OK
+label.orthographicform=Grapheme
 label.orthographicforms=Graphemes
+label.orthographicformswithcolon=Graphemes:
 label.parserresult=Parser Result
 label.predictedsyllabification=Predicted Syllable Breaks
 label.restoreproject=Restore a Project
