First pass at UI for grapheme-based natural classes and environments.
SYLP-6

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -96,7 +96,9 @@ cv.view.syllablepatterns.remove=Remove
 cv.view.syllablepatterns.wordboundary=Word boundary
 cv.view.words=CV Words
 cv.view.wordspredictedvscorrect=Predicted vs Correct CV Words
- 
+cv.view.graphemenaturalclasses=Grapheme Natural Classes
+cv.view.environments=Environments
+
 onc.view.segmentinventory=ONC Segment Inventory
 onc.view.syllablepatterns=ONC Syllable Patterns
 onc.view.words=ONC Words
@@ -109,6 +111,7 @@ label.backupproject=Back up this project
 label.browse=Browse
 label.cancel=Cancel
 label.choosebackup=Choose a backup to restore:
+label.choosegnc=Choose one or more graphemes and/or grapheme natural classes
 label.choosenc=Choose one or more natural classes
 label.choosepredicted=Choose which predicted syllabifications to convert to correct syllabification
 label.choosesnc=Choose one or more segments and/or natural classes
@@ -120,6 +123,7 @@ label.cvsyllabificationfailure=Failure: could not parse natural classes into syl
 label.date=Date
 label.description=Description
 label.discussion=Discussion
+label.environmentrepresentation=Environment
 label.environments=Environments
 label.exporting=Exporting: 
 label.exportingcanceled=Exporting canceled!
@@ -139,6 +143,8 @@ label.importparatextcharacterserror=The {0} file did not have any characters def
 label.backupnowbeforeclearcorrectsyllabification=Do you want to do a backup now?\n(Yes will let you make a backup and then clear the correct syllabifications.\nNo will clear the correct syllabifications without backing up first.\nCancel will exit.)
 label.backupnowbeforeclearwords=Do you want to do a backup now?\n(Yes will let you make a backup and then clear the words.\nNo will clear the words without backing up first.\nCancel will exit.)
 label.backupnowbeforeimport=Do you want to do a backup now?\n(Yes will let you make a backup and then do the import.\nNo will do the import without backing up first.\nCancel will exit.)
+label.graphemesandnaturalclasses=Gra. or NC
+label.graphemeornaturalclass=Gra. or NC
 label.name=Name
 label.naturalclasses=Natural Classes
 label.no=No
