Add error reporting to Environment editing UI

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -261,3 +261,20 @@ report.tawsuccess=Success!
 report.failurecolorword=red
 report.matchedcolorword=blue
 report.successcolorword=green
+
+#Environment messages
+environmentsyntaxerror.content_after_word_final_boundary=No content should appear after a word final boundary (#); detected at or about position {0}.
+environmentsyntaxerror.content_before_word_initial_boundary=No content should appear before a word initial #; detected at or about position {0}.
+environmentsyntaxerror.missing_class_after_opening_square_bracket=A class is missing; detected at or about position {0}.
+environmentsyntaxerror.missing_class_or_grapheme=A class or a grapheme is missing; detected at or about position {0}.
+environmentsyntaxerror.missing_closing_paren=A closing parenthesis is missing; detected at or about position {0}.
+environmentsyntaxerror.missing_closing_square_bracket=A closing square bracket is missing; detected at or about position {0}.
+environmentsyntaxerror.missing_opening_paren=An opening parenthesis is missing; detected at or about position {0}.
+environmentsyntaxerror.missing_opening_square_bracket=An opening square bracket is missing; detected at or about position {0}.
+environmentsyntaxerror.too_many_slashes=There are too many forward slashes (/); only one is needed (at the beginning); detected at or about position {0}.
+environmentsyntaxerror.too_many_underscores=There are too many environment underscores; only one is needed; detected at or about position {0}.
+environmentsyntaxerror.too_many_word_final_boundaries=There are too many word final boundary markers (#); only one is needed; detected at or about position {0}.
+environmentsyntaxerror.too_many_word_initial_boundaries=There are too many word initial boundary markers (#); only one is needed; detected at or about position {0}.
+environmentsyntaxerror.unknown=Unknown error in environment; detected at or about position {0}.
+environmentsyntaxerror.unknowngrapheme=Unrecognized grapheme beginning at '{0}' in environment.
+environmentsyntaxerror.unknowngraphemenaturalclass=Unrecognized grapheme natural class '{0}' in environment.
