Add comparison of new graphemes, grapheme natural classes, and environments

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -234,6 +234,13 @@ report.performedon=Performed on
 report.segmentinventory=Segment Inventory
 report.samesegmentinventory=Both have the same segment inventory.
 report.segmentswhichdiffer=The following segments differ between the two.
+report.graphemes=Graphemes
+report.graphemenaturalclasses=Grapheme Natural Classes
+report.samegraphemenaturalclasses=Both have the same set of grapheme natural classes.
+report.graphemenaturalclasseswhichdiffer=The following grapheme natural classes differ between the two.
+report.environments=Environments
+report.sameenvironments=Both have the same set of environments.
+report.environmentswhichdiffer=The following environments differ between the two.
 report.first=First{0}
 report.second=Second{0}
 report.adjectivalendingf=
