Add grapheme and environment info to Try  Word

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -119,6 +119,10 @@ label.close=Close
 label.correctsyllabification=Correct Syllable Breaks
 label.cvnaturalclassfailure=Failure: could not parse into natural classes; did find classes '{0}' covering graphemes '{1}'.
 label.cvsegmentfailure=Failure: could not parse into segments beginning at '{0}'.
+label.cvsegmentgraphemefailure=<br/><span style='margin-left:10pt;'>Tried grapheme '{0}'.</span>
+label.cvsegmentgraphemeenvironmentfailed=failed
+label.cvsegmentgraphemeenvironmentfailure=<br/><span style='margin-left:20pt;'>Tried environment '{0}'.  It {1}.</span>
+label.cvsegmentgraphemeenvironmentpassed=passed
 label.cvsyllabificationfailure=Failure: could not parse natural classes into syllables
 label.date=Date
 label.description=Description
