Update user documentation

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -147,8 +147,9 @@ label.importparatextcharacterserror=The {0} file did not have any characters def
 label.backupnowbeforeclearcorrectsyllabification=Do you want to do a backup now?\n(Yes will let you make a backup and then clear the correct syllabifications.\nNo will clear the correct syllabifications without backing up first.\nCancel will exit.)
 label.backupnowbeforeclearwords=Do you want to do a backup now?\n(Yes will let you make a backup and then clear the words.\nNo will clear the words without backing up first.\nCancel will exit.)
 label.backupnowbeforeimport=Do you want to do a backup now?\n(Yes will let you make a backup and then do the import.\nNo will do the import without backing up first.\nCancel will exit.)
+label.graphemenaturalclass=Grapheme Natural Class
 label.graphemesandnaturalclasses=Gra. or NC
-label.graphemeornaturalclass=Gra. or NC
+label.graphemeornaturalclass=Grapheme or natural class
 label.name=Name
 label.naturalclasses=Natural Classes
 label.no=No
