Make changes to grapheme classes show in environments Use combobox for grapheme classes when type [

--- a/src/sil/org/syllableparser/resources/SyllableParser.properties
+++ b/src/sil/org/syllableparser/resources/SyllableParser.properties
@@ -111,6 +111,7 @@ label.backupproject=Back up this project
 label.browse=Browse
 label.cancel=Cancel
 label.choosebackup=Choose a backup to restore:
+label.chooseclass=Choose class
 label.choosegnc=Choose one or more graphemes and/or grapheme natural classes
 label.choosenc=Choose one or more natural classes
 label.choosepredicted=Choose which predicted syllabifications to convert to correct syllabification
