--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="diff-match-patch/diff-match-patch.jar"/>
 	<classpathentry kind="lib" path="ControlsFX/controlsfx-8.40.12.jar"/>
+	<classpathentry kind="lib" path="ANTLR/antlr-4.7-complete.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Andy Black/Documents/ANTLR/antlr-4.7-complete.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
