Fix typo in paste tooltip

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -222,7 +222,7 @@ tooltip.open=Open Project   Ctrl+O
 tooltip.save=Save Project   Ctrl+S
 tooltip.cut=Cut   Ctrl+X
 tooltip.copy=Copy   Ctrl+C
-tooltip.paste=Paste   Ctrl+P
+tooltip.paste=Paste   Ctrl+V
 tooltip.insertnew=New item   Ctrl+I
 tooltip.remove=Remove item   Ctrl+D
 tooltip.syllabifywords=Parse all Words   Ctrl+W
