--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -49,7 +49,7 @@ menu.clearcorrectsyllabificationinwords=Remove correct _syllable breaks in all w
 menu.compareimplementations=Compare _Implementations
 menu.view=_View
 menu.changeinterfacelanguage=_Change the interface language
-menu.settings=Settings
+menu.settings=_Settings
 menu.help=_Help
 menu.about=_About Asheninka
 menu.userdocumentation=User _Documentation
@@ -58,7 +58,7 @@ menu.helpintro=_Introduction to syllabification
 
 # About dialog
 about.header=About Asheninka
-about.content=A linguistic program to explore syllabification and\nprovide a principled approach to hyphenation.\n\nVersion: {0}\n\n© 2016-2017 SIL International\nThis software is licensed under the LGPL, version 2.1 or later\n(http://www.gnu.org/licenses/lgpl-2.1.html)
+about.content=A linguistic program to explore syllabification and\nprovide a principled approach to hyphenation.\n\nVersion: {0}\n\n© 2016-2018 SIL International\nThis software is licensed under the LGPL, version 2.1 or later\n(http://www.gnu.org/licenses/lgpl-2.1.html)
 
 #File Open/Save As dialog; import/export
 file.filterdescription=Asheninka files
