--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="ControlsFX/controlsfx-8.40.12.jar"/>
 	<classpathentry kind="lib" path="ANTLR/antlr-4.7-complete.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="LibJavaDev/libjavadev-1.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
